# Github-Collab-Backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  main.py  schemas.py
src/api/: routes.py
src/core/: config.py  dependencies.py
src/db/: models.py  session.py
src/services/: gemini_service.py  github_service.py  langchain_service.py
src/utils/: helpers.py
tests/: conftest.py  test_admin.py  test_analysis.py  test_auth.py  test_health.py  test_projects.py  test_query.py  test_repository.py
